--- a/pom.xml
+++ b/pom.xml
@@ -170,6 +170,13 @@
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-jxr-plugin</artifactId>
               <version>2.3</version>
+              <configuration>
+                <excludes>
+                  <exclude>**/org/mozilla/apache/**</exclude>
+                  <exclude>**/ch/boye/**</exclude>
+                  <exclude>**/org/json/simple/**</exclude>
+                </excludes>
+              </configuration>
             </plugin>
             <plugin>
               <groupId>org.apache.maven.plugins</groupId>
