Ignore non-Sync files from code coverage

--- a/pom.xml
+++ b/pom.xml
@@ -152,6 +152,20 @@
         </executions>
       </plugin>
       <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>cobertura-maven-plugin</artifactId>
+        <version>2.5.1</version>
+        <configuration>
+          <instrumentation>
+            <excludes>
+              <exclude>**/ch/boye/**</exclude>
+              <exclude>**/org/json/**</exclude>
+              <exclude>**/org/mozilla/apache/**</exclude>
+            </excludes>
+          </instrumentation>
+        </configuration>
+      </plugin>
+      <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-site-plugin</artifactId>
         <version>3.0</version>
